wl_dev: edit rate card button visibility linked along edit profile button in Jugnoo OFF screen

--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_driver_initial.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_driver_initial.xml
@@ -84,6 +84,14 @@
             style="@style/ButtonTheme"
             />
 
+        <Button
+            android:id="@+id/bEditRateCard"
+            android:layout_width="190dp"
+            android:layout_marginTop="24dp"
+            android:text="@string/edit_rate_card"
+            style="@style/ButtonTheme"
+            />
+
 
 
     </LinearLayout>
