--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activty_edit_driver_profile.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activty_edit_driver_profile.xml
@@ -385,6 +385,36 @@
         </LinearLayout>
     </ScrollView>
 
+
+    <Button
+        android:id="@+id/bUploadDocuments"
+        android:layout_width="wrap_content"
+        android:layout_alignEnd="@+id/ivDiv"
+        android:layout_alignParentStart="true"
+        android:layout_height="40dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="20dp"
+        android:layout_marginStart="20dp"
+        android:layout_alignParentBottom="true"
+        android:background="@drawable/orange_btn_selector"
+        android:text="@string/upload_documents"
+        android:textColor="@drawable/white_color_selector"
+        android:tag="@string/dont_touch_me"
+        android:visibility="visible"
+        android:fontFamily="@font/maven_pro_medium"
+        />
+
+
+    <View
+        android:id="@+id/ivDiv"
+        android:layout_width="1dp"
+        android:layout_height="1dp"
+        android:layout_centerHorizontal="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="20dp"
+        />
+
+
     <Button
         android:id="@+id/bEditRateCard"
         android:layout_width="match_parent"
@@ -394,11 +424,14 @@
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
         android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
         android:background="@drawable/orange_btn_selector"
         android:text="@string/edit_rate_card"
         android:textColor="@drawable/white_color_selector"
-        android:textSize="16sp"
         android:tag="@string/dont_touch_me"
+        android:layout_toEndOf="@+id/bUploadDocuments"
+        android:layout_alignWithParentIfMissing="true"
+        android:fontFamily="@font/maven_pro_medium"
         />
 
 
