wl_dev: directions api hit interval from server, 120 for tt and 30 default

--- a/JugnooNewDriver/jugnooNewDriver/src/ttrides/res/values/values-wl.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/ttrides/res/values/values-wl.xml
@@ -112,4 +112,6 @@
     <!--resValue "color", 'black_earnings_bg', "#000000"-->
     <!--resValue "color", 'black_top_bar_bg', "#000000"-->
 
+    <integer name="driver_get_directions_interval">120000</integer>
+
 </resources>
