profile_options: filter fix for edit vehicle details

--- a/JugnooNewDriver/jugnooNewDriver/src/zoom/res/values/values-wl.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/zoom/res/values/values-wl.xml
@@ -48,6 +48,7 @@
     <integer name="splash_scene_bottom_bg_visibility">@integer/view_invisible</integer>
     <integer name="login_scene_top_bg_visibility">@integer/view_invisible</integer>
     <integer name="login_scene_bottom_bg_visibility">@integer/view_invisible</integer>
+    <bool name="show_edit_vehicle_settings">true</bool>
 
     <!--Login sign-up -->
     <drawable name="buttons_on_boarding_drawable">@drawable/background_translucent_white_rounded_orange_bordered</drawable>
@@ -77,7 +78,7 @@
     <integer name="show_language_control">@integer/view_gone</integer>
     <integer name="show_call_in_otp">@integer/view_visible</integer>
     <integer name="splash_scene_bg_visibility">@integer/view_visible</integer>
-    <bool name="vehicle_model_enabled">true</bool>
+    <bool name="vehicle_model_enabled">false</bool>
     <integer name="show_edit_rate_card">1</integer>
     <integer name="edit_profile_in_home_screen">1</integer>
     <integer name="upload_documents_custom_text">1</integer>
