wl_yourcab: sonfig changes

--- a/JugnooNewDriver/jugnooNewDriver/src/urcab/res/values/values-wl.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/urcab/res/values/values-wl.xml
@@ -16,7 +16,7 @@
     -->
 
 
-    <string name="appname">URCAB Driver</string>
+    <string name="appname">URCAB</string>
     <string name="app_name">URCAB Driver</string>
 
     <!--White Label Key-->
