--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_profile_screen.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_profile_screen.xml
@@ -105,11 +105,12 @@
                         android:tag="mwar"/>
                 </RelativeLayout>
 
-                <RelativeLayout
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
                     android:layout_margin="30px"
+                    android:orientation="vertical"
                     android:layout_toEndOf="@id/profileRl">
 
                     <TextView
@@ -119,7 +120,19 @@
                         android:layout_alignParentStart="true"
                         android:text="@string/name"
                         android:textColor="@color/textColor"
-                        android:textSize="40px"/>
+                        android:textSize="36px"/>
+
+                    <product.clicklabs.jugnoo.driver.utils.CustomTextVeiw
+                        android:id="@+id/textViewPhoneNumber"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentStart="true"
+                        android:layout_below="@id/textViewDriverName"
+                        android:layout_marginTop="5px"
+                        android:text="@string/phone_no"
+                        android:textColor="@color/textColorMedium"
+                        android:textSize="30px"
+                        android:fontFamily="@font/maven_pro_regular"/>
 
                     <product.clicklabs.jugnoo.driver.utils.CustomTextVeiw
                         android:id="@+id/textViewDriverId"
@@ -130,7 +143,7 @@
                         android:layout_marginTop="5px"
                         android:text="@string/driver_id"
                         android:textColor="@color/textColorMedium"
-                        android:textSize="36px"/>
+                        android:textSize="30px"/>
 
                     <product.clicklabs.jugnoo.driver.utils.CustomTextVeiw
                         android:id="@+id/textViewRankCity"
@@ -141,7 +154,7 @@
                         android:layout_marginTop="5px"
                         android:text="@string/rank_city"
                         android:textColor="@color/textColorMedium"
-                        android:textSize="36px"/>
+                        android:textSize="30px"/>
 
                     <product.clicklabs.jugnoo.driver.utils.CustomTextVeiw
                         android:id="@+id/textViewRankOverall"
@@ -152,40 +165,10 @@
                         android:layout_marginTop="5px"
                         android:text="@string/rank_overall"
                         android:textColor="@color/textColorMedium"
-                        android:textSize="36px"/>
-
-                    <RelativeLayout
-                        android:id="@+id/layoutEditProfile"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_below="@+id/textViewRankOverall"
-                        android:visibility="gone">
-
-                        <TextView
-                            android:id="@+id/textViewEditProfile"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_centerVertical="true"
-                            android:layout_marginStart="42px"
-                            android:layout_marginTop="5px"
-                            android:text="@string/Edit_profile"
-                            android:textColor="@color/white"
-                            android:textSize="40px"
-                            />
-
-                        <ImageView
-                            android:id="@+id/editIcon"
-                            android:layout_width="42px"
-                            android:layout_height="42px"
-                            android:layout_centerVertical="true"
-                            android:layout_marginStart="10px"
-                            android:layout_toEndOf="@+id/textViewEditProfile"
-                            android:background="@drawable/edit_icon_white"
-                            android:tag="mwar"/>
-                    </RelativeLayout>
+                        android:textSize="30px"/>
 
 
-                </RelativeLayout>
+                </LinearLayout>
 
 
             </RelativeLayout>
