--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activty_edit_driver_profile.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activty_edit_driver_profile.xml
@@ -113,6 +113,20 @@
                         style="@style/TextLarge"
                         android:textStyle="bold"/>
 
+                    <ImageView
+                        android:id="@+id/imageViewEdit"
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
+                        android:padding="5dp"
+                        android:layout_gravity="end"
+                        android:src="@drawable/edit_pencil_icon"
+                        android:tag="@string/dont_touch_me"
+                        android:visibility="visible"
+                        android:layout_marginTop="-40dp"
+                        android:layout_marginBottom="10dp"
+                        android:layout_marginEnd="5dp"
+                        />
+
                     <EditText
                         android:id="@+id/editTextUserName"
                         android:layout_width="match_parent"
@@ -134,17 +148,41 @@
                         android:layout_marginStart="40px"
                         android:background="@color/dividerColor"/>
 
+                    <EditText
+                        android:id="@+id/editTextUserEmail"
+                        android:layout_width="match_parent"
+                        android:layout_height="40dp"
+                        android:layout_marginEnd="20dp"
+                        android:layout_marginStart="20dp"
+                        android:background="#0000"
+                        android:hint="@string/email_id"
+                        android:inputType="textEmailAddress"
+                        android:maxLines="1"
+                        android:singleLine="true"
+                        android:textCursorDrawable="@null"
+                        style="@style/TextNormal"/>
+
+                    <ImageView
+                        android:id="@+id/ivDivEmail"
+                        android:layout_width="match_parent"
+                        android:layout_height="2px"
+                        android:layout_marginEnd="40px"
+                        android:layout_marginStart="40px"
+                        android:background="@color/dividerColor"/>
+
 
                     <RelativeLayout
                         android:layout_width="match_parent"
-                        android:layout_height="80px">
+                        android:layout_height="40dp"
+                        android:layout_marginEnd="18dp"
+                        android:layout_marginStart="18dp"
+                        android:tag="@string/dont_touch_me">
 
                         <TextView
                             android:id="@+id/tvCountryCode"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_centerVertical="true"
-                            android:layout_marginStart="16dp"
                             android:drawableEnd="@drawable/ic_arrow_down_vector"
                             android:drawablePadding="3dp"
                             android:hint="@string/code"
@@ -176,13 +214,15 @@
 
                         <ImageView
                             android:id="@+id/imageViewEditPhone"
-                            android:layout_width="40px"
-                            android:layout_height="40px"
+                            android:layout_width="30dp"
+                            android:layout_height="30dp"
+                            android:padding="5dp"
                             android:layout_alignParentEnd="true"
                             android:layout_centerVertical="true"
-                            android:layout_marginEnd="40px"
                             android:src="@drawable/edit_pencil_icon"
-                            android:tag="mwar"/>
+                            android:tag="@string/dont_touch_me"
+                            android:visibility="visible"
+                            />
 
                     </RelativeLayout>
                 </LinearLayout>
