--- a/JugnooNewDriver/jugnooNewDriver/src/zoom/res/values/values-wl.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/zoom/res/values/values-wl.xml
@@ -83,7 +83,7 @@
     <integer name="upload_documents_custom_text">1</integer>
     <integer name="email_input_at_signup">1</integer>
     <integer name="email_editable_in_profile">1</integer>
-
+    <integer name="username_editable_in_profile">1</integer>
 
 
 </resources>
