--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activty_edit_driver_profile.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activty_edit_driver_profile.xml
@@ -134,8 +134,29 @@
                         android:layout_marginEnd="20dp"
                         android:layout_marginStart="20dp"
                         android:background="#0000"
-                        android:hint="@string/name"
-                        android:inputType="textCapWords"
+                        android:hint="@string/first_name"
+                        android:inputType="textPersonName"
+                        android:maxLines="1"
+                        android:singleLine="true"
+                        android:textCursorDrawable="@null"
+                        style="@style/TextNormal"/>
+
+                    <ImageView
+                        android:layout_width="match_parent"
+                        android:layout_height="2px"
+                        android:layout_marginEnd="40px"
+                        android:layout_marginStart="40px"
+                        android:background="@color/dividerColor"/>
+
+                    <EditText
+                        android:id="@+id/editTextLastName"
+                        android:layout_width="match_parent"
+                        android:layout_height="40dp"
+                        android:layout_marginEnd="20dp"
+                        android:layout_marginStart="20dp"
+                        android:background="#0000"
+                        android:hint="@string/last_name"
+                        android:inputType="textPersonName"
                         android:maxLines="1"
                         android:singleLine="true"
                         android:textCursorDrawable="@null"
