--- a/JugnooNewDriver/jugnooNewDriver/src/urcab/res/values/values-wl.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/urcab/res/values/values-wl.xml
@@ -107,5 +107,6 @@
     <color name="themeColorAlternateLight">#bb3c3638</color>
 
     <color name="menu_top_background">@color/themeColor</color>
+    <integer name="max_speed_threshold">38</integer>
 
 </resources>
