--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_home.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_home.xml
@@ -208,8 +208,7 @@
                 android:id="@+id/relativeLayoutContainerEarnings"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:visibility="visible">
-            </RelativeLayout>
+                android:background="@color/white"/>
 
         </RelativeLayout>
 
