--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_home_top_bar.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_home_top_bar.xml
@@ -24,7 +24,7 @@
             android:tag="@string/dont_touch_me"/>
 
         <TextView
-            android:id="@+id/temptext"
+            android:id="@+id/tvTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
@@ -81,7 +81,7 @@
 
 
         <RelativeLayout
-            android:id="@+id/RelativeLayoutNotificationCenter"
+            android:id="@+id/rlNotificationCenter"
             android:layout_width="44dp"
             android:layout_height="44dp"
             android:layout_alignParentEnd="true"
