--- a/JugnooNewDriver/jugnooNewDriver/src/ttrides/res/values/values-wl.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/ttrides/res/values/values-wl.xml
@@ -113,5 +113,6 @@
     <!--resValue "color", 'black_top_bar_bg', "#000000"-->
 
     <integer name="driver_get_directions_interval">120000</integer>
+    <integer name="email_input_at_signup">1</integer>
 
 </resources>
