wl_dev: google api logging added

--- a/JugnooNewDriver/jugnooNewDriver/src/hitch/res/values/values-wl.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/hitch/res/values/values-wl.xml
@@ -71,4 +71,5 @@
     <integer name="show_total_fare_at_ride_end">1</integer>
     <integer name="email_input_at_signup">1</integer>
     <integer name="email_editable_in_profile">1</integer>
+    <integer name="google_apis_logging">1</integer>
 </resources>
