--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_driver_engaged.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_driver_engaged.xml
@@ -293,6 +293,21 @@
                         android:background="@drawable/bg_white_bottom_border_only"
                         android:visibility="gone"
                         />
+                    <TextView
+                        android:id="@+id/tvPickupTime"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:textSize="15sp"
+                        android:textColor="@color/black_text_v2"
+                        android:tag="@string/dont_touch_me"
+                        android:paddingTop="10dp"
+                        android:paddingBottom="10dp"
+                        android:layout_marginStart="15dp"
+                        android:layout_marginEnd="15dp"
+                        tools:text="Hello dkjhsajkhd"
+                        android:background="@drawable/bg_white_bottom_border_only"
+                        android:visibility="gone"
+                        />
 
                     <RelativeLayout
                         android:id="@+id/linearLayoutDeliveryItemHeader"
