f_toll_data: some improvements

--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/dialog_toll.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/dialog_toll.xml
@@ -60,10 +60,10 @@
             android:layout_marginBottom="20dp"
             >
         <Button
-            android:id="@+id/btnAddToll"
+            android:id="@+id/btnCancel"
             style="@style/DialogButtonAlternate"
             android:gravity="center"
-            android:text="@string/add_toll"
+            android:text="@string/cancel"
             android:layout_marginEnd="30dp"
             />
         <Button
