--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/dialog_add_toll.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/dialog_add_toll.xml
@@ -6,7 +6,7 @@
                 android:orientation="vertical"
                 android:splitMotionEvents="false"
                 android:tag="@string/dont_touch_me"
-    >
+                xmlns:tools="http://schemas.android.com/tools">
 
     <LinearLayout
         android:id="@+id/rl1"
@@ -29,23 +29,21 @@
             android:layout_gravity="center_horizontal"
             android:gravity="center"
             android:padding="12dp"
+            android:layout_marginBottom="10dp"
             android:text="@string/add_toll"
             android:textColor="@color/themeColor"/>
 
 
-        <EditText
-            android:id="@+id/etTollName"
-            style="@style/TextLarge"
+        <TextView
+            android:id="@+id/tvTollName"
+            style="@style/TextMedium"
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:layout_gravity="center_horizontal"
-            android:layout_marginTop="15dp"
+            android:layout_marginTop="0dp"
             android:layout_marginStart="20dp"
             android:layout_marginEnd="20dp"
-            android:background="@drawable/edittext_background"
             android:gravity="start|center_vertical"
-            android:hint="@string/toll_name"
-            android:inputType="text"
             android:paddingEnd="10dp"
             android:paddingStart="10dp"
             android:textColor="@color/textColor"
