--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values/styles.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values/styles.xml
@@ -64,6 +64,8 @@
         <item name="android:textSize">14sp</item>
         <item name="android:textAllCaps">true</item>
         <item name="android:tag">@string/dont_touch_me</item>
+        <item name="android:paddingStart">10dp</item>
+        <item name="android:paddingEnd">10dp</item>
         <item name="android:padding">8dp</item>
         <item name="android:fontFamily">@font/maven_pro_medium</item>
     </style>
@@ -77,6 +79,8 @@
         <item name="android:textColor">@color/white</item>
         <item name="android:textSize">14sp</item>
         <item name="android:textAllCaps">true</item>
+        <item name="android:paddingStart">10dp</item>
+        <item name="android:paddingEnd">10dp</item>
         <item name="android:tag">@string/dont_touch_me</item>
         <item name="android:padding">8dp</item>
         <item name="android:fontFamily">@font/maven_pro_medium</item>
@@ -92,6 +96,8 @@
         <item name="android:textColor">@color/white</item>
         <item name="android:textSize">14sp</item>
         <item name="android:textAllCaps">true</item>
+        <item name="android:paddingStart">10dp</item>
+        <item name="android:paddingEnd">10dp</item>
         <item name="android:tag">@string/dont_touch_me</item>
         <item name="android:fontFamily">@font/maven_pro_medium</item>
     </style>
@@ -103,6 +109,8 @@
         <item name="android:background">@drawable/menu_black_btn_selector</item>
         <item name="android:textColor">@color/white</item>
         <item name="android:textSize">14sp</item>
+        <item name="android:paddingStart">10dp</item>
+        <item name="android:paddingEnd">10dp</item>
         <item name="android:textAllCaps">true</item>
         <item name="android:tag">@string/dont_touch_me</item>
         <item name="android:fontFamily">@font/maven_pro_medium</item>
@@ -176,6 +184,20 @@
     <style name="CheckBoxTheme" parent="AppTheme">
         <item name="colorAccent">@color/themeColor</item>
         <item name="android:textColorSecondary">@color/bg_grey</item>
+    </style>
+
+    <style name="cross_popup">
+        <item name="android:layout_width">73px</item>
+        <item name="android:layout_height">73px</item>
+        <item name="android:layout_alignEnd">@+id/linearLayoutInner</item>
+        <item name="android:layout_alignTop">@+id/linearLayoutInner</item>
+        <item name="android:clickable">true</item>
+        <item name="android:src">@drawable/ic_cross_popup_selector</item>
+        <item name="android:tag">mwar</item>
+        <item name="android:paddingStart">10px</item>
+        <item name="android:paddingBottom">10px</item>
+        <item name="android:layout_marginEnd">-20px</item>
+        <item name="android:layout_marginTop">-20px</item>
     </style>
 
 </resources>
