--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_top_bar.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_top_bar.xml
@@ -26,7 +26,7 @@
         android:textAllCaps="true"
         android:maxHeight="45dp"
         style="@style/TextTitle"
-        android:autoSizeTextType="uniform"
+        app:autoSizeTextType="uniform"
         android:layout_toEndOf="@+id/backBtn"
         android:layout_marginEnd="38dp"
         android:layout_alignParentEnd="true"
