wl_dev: auto zoom server controlled

--- a/JugnooNewDriver/jugnooNewDriver/src/hitch/res/values/values-wl.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/hitch/res/values/values-wl.xml
@@ -72,4 +72,5 @@
     <integer name="email_input_at_signup">1</integer>
     <integer name="email_editable_in_profile">1</integer>
     <integer name="google_apis_logging">1</integer>
+    <integer name="driver_auto_zoom_enabled">0</integer>
 </resources>
