f_toll_data: modified toll key corrected

--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/dialog_add_toll.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/dialog_add_toll.xml
@@ -18,6 +18,8 @@
         android:background="@drawable/dialog_background_color"
         android:orientation="vertical"
         android:splitMotionEvents="false"
+        android:clickable="true"
+        android:focusable="true"
 
         >
 
