--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_driver_engaged.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_driver_engaged.xml
@@ -384,35 +384,38 @@
                         android:layout_marginStart="30px"
                         android:layout_marginEnd="30px"/>
 
-                    <LinearLayout
+                    <RelativeLayout
                         android:layout_width="match_parent"
-                        android:layout_height="142px"
-                        android:orientation="horizontal"
-                        android:layout_marginTop="12px">
+                        android:layout_height="wrap_content"
+                        android:paddingTop="20px"
+                        android:paddingBottom="20px">
 
                         <LinearLayout
                             android:id="@+id/linearLayoutContent"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:orientation="vertical">
+                            android:orientation="vertical"
+                            android:layout_toStartOf="@+id/textViewShowDistance"
+                            android:layout_alignParentStart="true"
+                            android:minHeight="70dp"
+                            android:layout_marginStart="30px"
+                            android:layout_marginEnd="30px">
 
                             <TextView
                                 android:id="@+id/textViewCustomerPickupAddress"
-                                android:layout_width="448px"
+                                android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:layout_marginStart="30px"
-                                android:maxLines="2"
+                                android:maxLines="4"
                                 android:textSize="28px"
-                                android:text="lllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllll"
+                                android:text="lllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllll"
                                 android:textColor="@color/black_text_v2"
                             />
 
                             <TextView
                                 android:id="@+id/textViewCustomerCashRequired"
-                                android:layout_width="428px"
+                                android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:visibility="visible"
-                                android:layout_marginStart="30px"
                                 android:layout_marginTop="10px"
                                 android:layout_marginBottom="10px"
                                 android:textSize="28px"
@@ -426,9 +429,10 @@
                             android:id="@+id/textViewShowDistance"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_gravity="center_vertical"
-                            android:layout_marginStart="100px"
-                            android:layout_marginEnd="25px"
+                            android:layout_centerVertical="true"
+                            android:layout_alignParentEnd="true"
+                            android:layout_marginStart="30px"
+                            android:layout_marginEnd="30px"
                             android:gravity="end"
                             android:text="@string/NA"
                             android:textColor="@color/black"
@@ -436,7 +440,7 @@
                             android:visibility="visible"
                         />
 
-                    </LinearLayout>
+                    </RelativeLayout>
 
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -498,11 +502,6 @@
                 android:layout_gravity="bottom"
                 android:layout_alignParentBottom="true"/>
 
-            <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="6px"
-                android:visibility="gone"
-                android:background="@drawable/shadow_up"/>
 
             <!-- in ride operations rl-->
 
@@ -560,40 +559,6 @@
                     android:textSize="@dimen/text_size_30"
                     android:visibility="gone"
                     />
-
-                <RelativeLayout
-                    android:id="@+id/relativeLayoutItemHeader"
-                    android:layout_width="720px"
-                    android:layout_height="wrap_content"
-                    android:paddingTop="20px"
-                    android:paddingBottom="20px"
-                    android:background="@drawable/background_white_top_rounded_bordered">
-
-
-                    <ImageView
-                        android:id="@+id/imageViewDot1"
-                        android:layout_width="14px"
-                        android:layout_height="14px"
-                        android:layout_marginStart="29px"
-                        android:layout_centerVertical="true"
-                        android:src="@drawable/red_dot_icon"
-                        />
-
-                    <TextView
-                        android:id="@+id/textViewCustomerAddressInRide"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:textSize="28px"
-                        android:hint="@string/enter_destination"
-                        android:layout_marginStart="32px"
-                        android:layout_marginEnd="12px"
-                        android:maxLines="2"
-                        android:layout_toEndOf="@+id/imageViewDot1"
-                        android:layout_centerVertical="true"
-                        android:textColor="@color/black_text_v2"/>
-
-
-                </RelativeLayout>
 
                 <RelativeLayout
                     android:id="@+id/relativeLayoutEnterDestination"
