--- a/JugnooNewDriver/jugnooNewDriver/src/val/res/layout/frag_login.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/val/res/layout/frag_login.xml
@@ -160,18 +160,12 @@
 
         <Button
             android:id="@+id/btnGenerateOtp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            style="@style/ButtonTheme"
             android:layout_marginTop="20dp"
             android:layout_marginBottom="20dp"
             app:layout_constrainedHeight="true"
-            android:background="@drawable/orange_btn_selector"
-            android:minWidth="90dp"
-            android:paddingEnd="15dp"
             android:visibility="visible"
-            android:paddingStart="15dp"
             android:text="@string/btn_text_OTP"
-            android:textColor="@android:color/white"
             app:layout_constraintVertical_bias="0.0"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
