--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/drawable/orange_btn_pressed.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/drawable/orange_btn_pressed.xml
@@ -3,6 +3,6 @@
     android:shape="rectangle" >
     
     <solid android:color="@color/themeColorLight"/>
-    <corners android:radius="@dimen/button_corner_radius"/>
+    <corners android:radius="50dp"/>
 
 </shape>
