--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_driver_documents.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_driver_documents.xml
@@ -29,14 +29,12 @@
         android:id="@+id/submitButton"
         android:layout_width="320dp"
         android:layout_height="40dp"
+        style="@style/ButtonTheme"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginBottom="7dp"
         android:layout_marginTop="7dp"
-        android:background="@drawable/orange_btn_selector"
-        android:text="@string/Submit"
-        android:textColor="@drawable/white_color_selector"
-        android:textSize="16sp"/>
+        android:text="@string/Submit"/>
 
 </android.support.constraint.ConstraintLayout>
