--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activty_edit_driver_profile.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activty_edit_driver_profile.xml
@@ -130,7 +130,7 @@
                     <EditText
                         android:id="@+id/editTextUserName"
                         android:layout_width="match_parent"
-                        android:layout_height="40dp"
+                        android:layout_height="46dp"
                         android:layout_marginEnd="20dp"
                         android:layout_marginStart="20dp"
                         android:background="#0000"
@@ -151,7 +151,7 @@
                     <EditText
                         android:id="@+id/editTextLastName"
                         android:layout_width="match_parent"
-                        android:layout_height="40dp"
+                        android:layout_height="46dp"
                         android:layout_marginEnd="20dp"
                         android:layout_marginStart="20dp"
                         android:background="#0000"
@@ -172,7 +172,7 @@
                     <EditText
                         android:id="@+id/editTextUserEmail"
                         android:layout_width="match_parent"
-                        android:layout_height="40dp"
+                        android:layout_height="46dp"
                         android:layout_marginEnd="20dp"
                         android:layout_marginStart="20dp"
                         android:background="#0000"
@@ -194,9 +194,9 @@
 
                     <RelativeLayout
                         android:layout_width="match_parent"
-                        android:layout_height="40dp"
-                        android:layout_marginEnd="18dp"
-                        android:layout_marginStart="18dp"
+                        android:layout_height="46dp"
+                        android:layout_marginEnd="20dp"
+                        android:layout_marginStart="20dp"
                         android:tag="@string/dont_touch_me">
 
                         <TextView
@@ -206,7 +206,7 @@
                             android:layout_centerVertical="true"
                             android:drawableEnd="@drawable/ic_arrow_down_vector"
                             android:drawablePadding="3dp"
-                            android:hint="@string/code"
+                            android:hint="+"
                             android:includeFontPadding="false"
                             android:paddingBottom="8dp"
                             android:paddingEnd="5dp"
@@ -449,20 +449,15 @@
 
     <Button
         android:id="@+id/bUploadDocuments"
-        android:layout_width="wrap_content"
+        style="@style/ButtonTheme"
         android:layout_alignEnd="@+id/ivDiv"
         android:layout_alignParentStart="true"
-        android:layout_height="40dp"
         android:layout_marginTop="5dp"
         android:layout_marginBottom="20dp"
         android:layout_marginStart="20dp"
         android:layout_alignParentBottom="true"
-        android:background="@drawable/orange_btn_selector"
         android:text="@string/upload_documents"
-        android:textColor="@drawable/white_color_selector"
-        android:tag="@string/dont_touch_me"
         android:visibility="visible"
-        android:fontFamily="@font/maven_pro_medium"
         />
 
 
@@ -478,21 +473,16 @@
 
     <Button
         android:id="@+id/bEditRateCard"
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
+        style="@style/ButtonTheme"
         android:layout_marginTop="5dp"
         android:layout_marginBottom="20dp"
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
         android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
-        android:background="@drawable/orange_btn_selector"
         android:text="@string/edit_rate_card"
-        android:textColor="@drawable/white_color_selector"
-        android:tag="@string/dont_touch_me"
         android:layout_toEndOf="@+id/bUploadDocuments"
         android:layout_alignWithParentIfMissing="true"
-        android:fontFamily="@font/maven_pro_medium"
         />
 
 
