--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/frag_login_intial.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/frag_login_intial.xml
@@ -155,16 +155,10 @@
 
         <Button
             android:id="@+id/btnGenerateOtp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            style="@style/ButtonTheme"
             android:layout_marginTop="20dp"
-            android:background="@drawable/orange_btn_selector"
-            android:minWidth="90dp"
-            android:paddingEnd="15dp"
             android:visibility="gone"
-            android:paddingStart="15dp"
             android:text="@string/btn_text_OTP"
-            android:textColor="@android:color/white"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/background"/>
