--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/fragment_driver_info_update.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/fragment_driver_info_update.xml
@@ -195,14 +195,11 @@
 
         <Button
             android:id="@+id/bContinue"
+            style="@style/ButtonTheme"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:background="@drawable/orange_btn_selector"
             android:text="@string/continue_text"
             android:textAllCaps="true"
-            android:textColor="@color/white"
-            android:textSize="16sp"
             android:layout_marginStart="10dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/bCancel"
@@ -210,15 +207,12 @@
 
         <Button
             android:id="@+id/bCancel"
+            style="@style/ButtonThemeAlternate"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="10dp"
-            android:background="@drawable/menu_black_btn_selector"
             android:text="@string/cancel"
             android:textAllCaps="true"
-            android:textColor="@color/white"
-            android:textSize="16sp"
             app:layout_constraintEnd_toStartOf="@+id/bContinue"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/rvVehicleTypes" />
