--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_driver_engaged.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_driver_engaged.xml
@@ -508,24 +508,17 @@
 
             <Button
                 android:id="@+id/buttonAddLuggage"
-                android:layout_width="wrap_content"
-                android:layout_height="39dp"
+                style="@style/ButtonTheme"
                 android:layout_marginBottom="5dp"
+                android:paddingEnd="10dp"
                 android:layout_gravity="end"
                 android:layout_marginEnd="10dp"
                 android:contentDescription="@string/call_driver"
                 android:visibility="visible"
-                android:paddingStart="10dp"
-                android:paddingEnd="10dp"
                 android:drawablePadding="5dp"
                 android:text="@string/add_luggage"
                 android:gravity="center"
-                style="@style/TextNormal"
-                android:textSize="14sp"
-                android:textColor="@color/white"
-                android:drawableEnd="@drawable/ic_suitcase"
-                android:background="@drawable/orange_btn_selector"
-                android:tag="@string/dont_touch_me" />
+                android:drawableEnd="@drawable/ic_suitcase"/>
 
 
 
