--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/list_item_driver_request.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/list_item_driver_request.xml
@@ -179,24 +179,20 @@
 
             <Button
                 android:id="@+id/buttonAcceptRide"
-                android:layout_width="380px"
-                android:layout_height="69px"
-                android:background="@drawable/orange_btn_selector"
+                style="@style/ButtonTheme"
+                android:layout_width="140dp"
+                android:layout_height="34dp"
                 android:text="@string/accept"
-                android:textColor="@drawable/white_color_selector"
-                android:textSize="@dimen/button_text_size"
                 />
 
             <product.clicklabs.jugnoo.driver.utils.CustomButtonView
                 android:id="@+id/buttonCancelRide"
-                android:layout_width="200px"
-                android:layout_height="69px"
-                android:layout_marginLeft="30px"
-                android:layout_toRightOf="@+id/buttonAcceptRide"
-                android:background="@drawable/menu_black_btn_selector"
+                style="@style/ButtonThemeAlternate"
+                android:layout_width="100dp"
+                android:layout_height="34dp"
+                android:layout_marginStart="15dp"
+                android:layout_toEndOf="@+id/buttonAcceptRide"
                 android:text="@string/cancel"
-                android:textColor="@drawable/white_color_selector"
-                android:textSize="@dimen/button_text_size"
                 />
 
         </RelativeLayout>
