--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_customer_info.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_customer_info.xml
@@ -60,20 +60,18 @@
     </LinearLayout>
 
     <LinearLayout
-        android:layout_width="220px"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
         android:layout_marginEnd="25px"
-        android:layout_marginTop="12px"
-        android:layout_marginBottom="12px"
         android:orientation="vertical"
         android:layout_centerVertical="true"
         >
 
         <RelativeLayout
             android:id="@+id/relativeLayoutCall1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="45dp"
+            android:layout_height="45dp"
             android:tag="@string/dont_touch_me"
             android:background="@drawable/green_btn_call_selector">
 
@@ -81,22 +79,9 @@
                 android:id="@+id/driverCallIcon"
                 android:layout_width="22dp"
                 android:layout_height="22dp"
-                android:layout_marginStart="7dp"
-                android:layout_marginTop="10dp"
-                android:layout_marginBottom="10dp"
-                android:layout_centerVertical="true"
+                android:layout_centerInParent="true"
                 android:src="@drawable/call_icon_selector"/>
 
-            <product.clicklabs.jugnoo.driver.utils.CustomTextVeiw
-                android:id="@+id/textViewCall"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:layout_marginStart="34dp"
-                android:text="@string/call"
-                android:textColor="@color/textColorButton"
-                android:textSize="20sp"
-                />
         </RelativeLayout>
 
 
